# learn-etc

./: CNAME  README.md  pyproject.toml
examples/: dev.ipynb
src/alt_learn/: OptunaSearchCV.py  OptunaSearchCVMultiMetric.py  __init__.py  feature_select.py
src/alt_learn/duckdb/: __init__.py  duckdb.py
src/alt_learn/pandas/: __init__.py  pandas.py
tests/: compare_dt.ipynb  compare_dt_pd_pl.py  compare_ohe.ipynb  multi_objective_optuna.py  sklearn_ohe_pl_vs_pd.ipynb
