[project]
name = "alt-learn"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.7.1",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/alt_learn"]
