[project]
name = "alt-learn"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "duckdb==1.0",
    "polars>=1.7.1",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "feature-engine>=1.8.1",
    "pyarrow>=17.0.0",
    "optuna>=4.0.0",
    "optuna-integration>=4.0.0",
    "narwhals>=1.9.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "jupyterlab>=4.2.5",
    "seaborn>=0.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/alt_learn"]
